style: fix alignment of folder section

--- a/public/styles.css
+++ b/public/styles.css
@@ -103,30 +103,23 @@ main {
   flex: 1;
   display: flex;
   color: var(--secondary-text-color);
-}
-
-/* temp */
-main > * {
-  border: 1px solid black;
+  align-items: flex-start;
+  padding: 50px;
 }
 
 .folders {
-  /* temp */
-  border: none;
   min-width: 320px;
   font-size: 28px;
   display: flex;
   flex-direction: column;
   max-height: 82vh;
   overflow-y: auto;
-  align-self: center;
 }
 
 .folders > .folderNameForm {
   background-color: var(--primary-color);
   position: sticky;
   top: 0;
-  border-bottom: 1px solid black;
 }
 
 #openFolderNameInputBtn {
@@ -136,7 +129,7 @@ main > * {
   padding-left: 20px;
   font-size: 32px;
   font-weight: bolder;
-  box-shadow: 0px 5px 10px 10px rgb(0, 0, 0, 0.1);
+  box-shadow: -5px -5px 10px 10px rgb(0, 0, 0, 0.2);
 }
 
 #openFolderNameInputBtn:hover {
@@ -152,6 +145,7 @@ main > * {
   text-overflow: ellipsis;
   border-bottom: 1px solid black;
   border-right: 1px solid black;
+  border-left: 1px solid black;
 }
 
 .folderNameBtn:hover {
